--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.16",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
     "moment": "^2.24.0",
