--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:no-mock": "cross-env Mock=none vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "@vue/babel-preset-jsx": "^1.1.0",
     "ant-design-vue": "^1.3.16",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "cross-env": "^5.2.1",
     "echarts": "^4.2.1",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
